{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 31,
  "lineage": "6366e6ae-88fa-1a4d-e6ca-ff7faea07018",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-aks-nsg",
            "location": "australiacentral",
            "name": "cloudproj-dev-aks-nsg",
            "resource_group_name": "cloudproj-dev-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "cloudproj-dev-aks-nsg",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-database-nsg",
            "location": "australiacentral",
            "name": "cloudproj-dev-database-nsg",
            "resource_group_name": "cloudproj-dev-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "cloudproj-dev-database-nsg",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "public1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-public1-nsg",
            "location": "australiacentral",
            "name": "cloudproj-dev-public1-nsg",
            "resource_group_name": "cloudproj-dev-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "cloudproj-dev-public1-nsg",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-public2-nsg",
            "location": "australiacentral",
            "name": "cloudproj-dev-public2-nsg",
            "resource_group_name": "cloudproj-dev-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "cloudproj-dev-public2-nsg",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/routeTables/cloudproj-dev-private-rt-1",
            "location": "australiacentral",
            "name": "cloudproj-dev-private-rt-1",
            "resource_group_name": "cloudproj-dev-rg",
            "route": [],
            "subnets": [
              "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/aks",
              "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/database"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "cloudproj-dev-private-rt-1",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/routeTables/cloudproj-dev-private-rt-2",
            "location": "australiacentral",
            "name": "cloudproj-dev-private-rt-2",
            "resource_group_name": "cloudproj-dev-rg",
            "route": [],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "cloudproj-dev-private-rt-2",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/aks",
            "name": "aks",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloudproj-dev-rg",
            "virtual_network_name": "cloudproj-dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "aks",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2",
            "virtual_network_name": "cloudproj-dev-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/database",
            "name": "database",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloudproj-dev-rg",
            "virtual_network_name": "cloudproj-dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "database",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2",
            "virtual_network_name": "cloudproj-dev-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "public1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/public1",
            "name": "public1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloudproj-dev-rg",
            "virtual_network_name": "cloudproj-dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "public1",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2",
            "virtual_network_name": "cloudproj-dev-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/public2",
            "name": "public2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloudproj-dev-rg",
            "virtual_network_name": "cloudproj-dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "public2",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2",
            "virtual_network_name": "cloudproj-dev-vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/aks",
            "network_security_group_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-aks-nsg",
            "subnet_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/aks"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsgs",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnets",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/database",
            "network_security_group_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-database-nsg",
            "subnet_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/database"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsgs",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnets",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "public1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/public1",
            "network_security_group_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-public1-nsg",
            "subnet_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/public1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsgs",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnets",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/public2",
            "network_security_group_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-public2-nsg",
            "subnet_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/public2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsgs",
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnets",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/aks",
            "route_table_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/routeTables/cloudproj-dev-private-rt-1",
            "subnet_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/aks"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_route_table.private",
            "module.network.azurerm_subnet.subnets",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/database",
            "route_table_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/routeTables/cloudproj-dev-private-rt-1",
            "subnet_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/database"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg",
            "module.network.azurerm_route_table.private",
            "module.network.azurerm_subnet.subnets",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8f3303c4-0184-4fb8-aa50-4d66ad0abe85",
            "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet",
            "location": "australiacentral",
            "name": "cloudproj-dev-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "cloudproj-dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/public1",
                "name": "public1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-public1-nsg"
              },
              {
                "address_prefixes": [
                  "10.10.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/public2",
                "name": "public2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-public2-nsg"
              },
              {
                "address_prefixes": [
                  "10.10.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/aks",
                "name": "aks",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/routeTables/cloudproj-dev-private-rt-1",
                "security_group": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-aks-nsg"
              },
              {
                "address_prefixes": [
                  "10.10.4.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/virtualNetworks/cloudproj-dev-vnet/subnets/database",
                "name": "database",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/routeTables/cloudproj-dev-private-rt-1",
                "security_group": "/subscriptions/1121971d-0bc1-4f7c-8422-ce56228056d2/resourceGroups/cloudproj-dev-rg/providers/Microsoft.Network/networkSecurityGroups/cloudproj-dev-database-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "cloudproj-dev-vnet",
            "resource_group_name": "cloudproj-dev-rg",
            "subscription_id": "1121971d-0bc1-4f7c-8422-ce56228056d2"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}